--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "license": "MIT",
   "scripts": {
     "dev": "USE_MEM_STORAGE=1 NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "prisma generate && vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "GATE_CODE_ENCRYPTION_KEY=dev_encryption_key_32bytes_ok! USE_MEM_STORAGE=1 NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
+    "postinstall": "prisma generate",
     "cap:sync": "npx cap sync",
     "cap:add:ios": "npx cap add ios",
     "cap:open:ios": "npx cap open ios"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@capacitor/core": "^6.2.0",
     "@google-cloud/storage": "^7.17.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
+    "@prisma/client": "^7.0.1",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -51,7 +54,6 @@
     "@stripe/stripe-js": "^7.9.0",
     "@tanstack/react-query": "^5.60.5",
     "@tremor/react": "^3.18.7",
-    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.10",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/memoizee": "^0.4.12",
@@ -63,7 +65,8 @@
     "@uppy/file-input": "^4.2.2",
     "@uppy/progress-bar": "^4.3.2",
     "@uppy/react": "^4.5.2",
-    "bcryptjs": "^3.0.2",
+    "@vercel/postgres": "^0.10.0",
+    "bcryptjs": "^3.0.3",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -86,6 +89,7 @@
     "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
     "nanoid": "^5.1.5",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "openid-client": "^6.7.1",
     "passport": "^0.7.0",
@@ -119,6 +123,7 @@
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
@@ -133,6 +138,7 @@
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
+    "prisma": "^7.0.1",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
