--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev:build": "vite build && NODE_ENV=development tsx server/index.ts",
     "build": "prisma generate && vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "GATE_CODE_ENCRYPTION_KEY=dev_encryption_key_32bytes_ok! NODE_ENV=production node dist/index.js",
+    "simulate:prod": "vite build && NODE_ENV=production PORT=5001 node dist/index.js",
+    "test:parity": "tsx scripts/vercel-parity-test.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "postinstall": "prisma generate",
