Vercel parity: fixed auth, DB schema, env vars, and absolute URLs

--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@
 DATABASE_URL="PASTE_VERCEL_PRISMA_DB_URL"
 PRISMA_DATABASE_URL="PASTE_VERCEL_PRISMA_DB_URL"
 POSTGRES_URL="PASTE_VERCEL_PRISMA_DB_URL"
+APP_BASE_URL="PASTE_PRODUCTION_APP_URL"
+NEXTAUTH_URL="PASTE_PRODUCTION_APP_URL"
+NEXTAUTH_SECRET="PASTE_NEXTAUTH_SECRET"
+JWT_SECRET="PASTE_JWT_SECRET"
