--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
+    "@prisma/adapter-pg": "^7.0.1",
     "prisma": "^7.0.1",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
