--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "outputDirectory": "dist/public",
   "framework": null,
   "rewrites": [
+    { "source": "/api/providers/by-user/(.*)", "destination": "/api/providers/by-user" },
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
