--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,9 @@
   "outputDirectory": "dist/public",
   "framework": null,
   "rewrites": [
+    { "source": "/sw.js", "destination": "/sw.js" },
+    { "source": "/manifest.json", "destination": "/manifest.json" },
+    { "source": "/attached_assets/(.*)", "destination": "/attached_assets/$1" },
     { "source": "/api/providers/by-user/(.*)", "destination": "/api/providers/by-user" },
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
